# duckdb-smart-autocomplete

./: .clangd  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  data  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md
src/: CMakeLists.txt  README.md  autocomplete_core.cpp  autocomplete_extension.cpp  autocomplete_qualifier.cpp  keyword_helper.cpp  matcher.cpp  parse_tree_walk.cpp  peg_transform_with_cached_matcher.cpp
src/include/: autocomplete_catalog_provider.hpp  autocomplete_qualifier.hpp  keyword_helper.hpp  matcher.hpp  parse_tree_walk.hpp  peg_matcher_cache.hpp  peg_transform_cached.hpp  smart_autocomplete_extension.hpp  tokenizer.hpp
src/parser/tokenizer/: CMakeLists.txt
test/: README.md
test/sql/: alter_table.test  check.test  columns_qualified.test  copy.test  create_function.test  create_schema.test  create_secret.test  create_sequence.test  create_table.test  create_type.test  cte_nested.test  debug_test.test  drop.test  expressions.test  identical_schema_table.test  insert_into.test  pragma.test  scalar_functions.test  select.test  setting.test  show.test  suggest_file.test  table_functions.test  tpch.test  views.test  window.test
